Closed
Bug 1212133
Opened 10 years ago
Closed 4 years ago
crash in mozilla::a11y::DocAccessible::RemoveDependentIDsFor(mozilla::a11y::Accessible*, nsIAtom*)
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
People
(Reporter: tbsaunde, Assigned: surkov)
Details
(Keywords: crash, Whiteboard: a11y:crash-tree)
Crash Data
Attachments
(1 file)
|
1.71 KB,
patch
|
davidb
:
review+
ritu
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-840b56a3-64c0-4a40-9af4-d42822151006.
=============================================================
| Assignee | ||
Comment 1•10 years ago
|
||
any ideas why nsTArray<Accessible*>::Contains may crash, see [1] and [2]?
[1] http://hg.mozilla.org/mozilla-central/annotate/5f16c6c2b969/accessible/generic/DocAccessible.cpp#l1715
[2] http://hg.mozilla.org/mozilla-central/annotate/b56aeea0c470/xpcom/glue/nsTArray.h#l1098
Comment 2•10 years ago
|
||
A couple on Windows involving OOM:
report bp-5ad10efa-6833-413d-af8f-500812151009.
report bp-b0370a1b-6b09-4548-9c89-5e4372151007.
These crashes are currently very infrequent.
Updated•10 years ago
|
Crash Signature: [@ mozilla::a11y::DocAccessible::RemoveDependentIDsFor(mozilla::a11y::Accessible*, nsIAtom*)] → [@ mozilla::a11y::DocAccessible::RemoveDependentIDsFor(mozilla::a11y::Accessible*, nsIAtom*)]
[@ mozilla::a11y::DocAccessible::RemoveDependentIDsFor]
Comment 3•10 years ago
|
||
This just crashed facebook messenger for me in 44.0a2.
https://crash-stats.mozilla.com/report/index/7782c200-829c-43c4-8715-b52cd2151218
Comment 4•10 years ago
|
||
Alex can you recreate this in fb messenger?
Flags: needinfo?(surkov.alexander)
| Assignee | ||
Comment 5•10 years ago
|
||
(In reply to David Bolter [:davidb] from comment #4)
> Alex can you recreate this in fb messenger?
no so far, I'll try on Windows, when I'll set up the machine
Flags: needinfo?(surkov.alexander)
Comment 6•10 years ago
|
||
I'm trying to remember the exact steps that got me here. I think I typed someone's name in the search box, selected the name and then began typing the message. After about 1~2 seconds it crashed.
Updated•10 years ago
|
Assignee: nobody → surkov.alexander
Surkov, this bug is a top crasher on Beta44. Hoping that we can get a fix/repro available soon. Thanks!
Flags: needinfo?(surkov.alexander)
| Assignee | ||
Comment 8•10 years ago
|
||
(In reply to Ritu Kothari (:ritu) from comment #7)
> Surkov, this bug is a top crasher on Beta44. Hoping that we can get a
> fix/repro available soon. Thanks!
is the issue different from bug 1213281 which has been landed on release and aurora channels?
Flags: needinfo?(surkov.alexander)
Surkov, bug 1213281 landed on Aurora44 (which is now Beta44) so this bug is a different issue.
Flags: needinfo?(surkov.alexander)
| Assignee | ||
Comment 10•10 years ago
|
||
Flags: needinfo?(surkov.alexander)
Attachment #8704270 -
Flags: review?(dbolter)
| Assignee | ||
Comment 11•10 years ago
|
||
Updated•10 years ago
|
Attachment #8704270 -
Flags: review?(dbolter) → review+
| Assignee | ||
Comment 12•10 years ago
|
||
Comment on attachment 8704270 [details] [diff] [review]
patch
Approval Request Comment
[Feature/regressing bug #]:aria-owns implementation initially landed on this beta
[User impact if declined]:top crash
[Describe test coverage new/current, TreeHerder]:not covered
[Risks and why]: small, couple of null checks
[String/UUID change made/needed]:no
Attachment #8704270 -
Flags: approval-mozilla-beta?
Comment 13•10 years ago
|
||
Alexander, could you please describe the test coverage you did on this patch? Was it locally and manually tested to ensure there were no obvious regressions? I will not be able to take a patch with "no test coverage" to Beta44.
Flags: needinfo?(surkov.alexander)
| Assignee | ||
Comment 14•10 years ago
|
||
(In reply to Ritu Kothari (:ritu) from comment #13)
> Alexander, could you please describe the test coverage you did on this
> patch? Was it locally and manually tested to ensure there were no obvious
> regressions? I will not be able to take a patch with "no test coverage" to
> Beta44.
I meant there's no test coverage for the patch, because no steps to reproduce. Try server build was ok, so all mochiteset passed. Thus no obvious regressions.
Flags: needinfo?(surkov.alexander)
Comment 15•10 years ago
|
||
Comment on attachment 8704270 [details] [diff] [review]
patch
not null checks, beta44+
Attachment #8704270 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
status-firefox44:
--- → affected
status-firefox45:
--- → affected
Comment 16•10 years ago
|
||
Surkov, could you also request uplift to Aurora45?
Flags: needinfo?(surkov.alexander)
| Assignee | ||
Comment 17•10 years ago
|
||
(In reply to Ritu Kothari (:ritu) from comment #16)
> Surkov, could you also request uplift to Aurora45?
beta and aurora have a quite different code, aurora might not need a patch like this
Flags: needinfo?(surkov.alexander)
Comment 18•10 years ago
|
||
| bugherder uplift | ||
Comment 19•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
Comment 20•9 years ago
|
||
Alex could you take another look here? We're still crashing in release (FF 44):
https://crash-stats.mozilla.com/signature/?product=Firefox&accessibility=__true__&signature=nsTArray_Impl%3CT%3E%3A%3AContains%3CT%3E+|+mozilla%3A%3Aa11y%3A%3ADocAccessible%3A%3ARemoveDependentIDsFor&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&page=1#reports
Flags: needinfo?(surkov.alexander)
| Assignee | ||
Comment 21•9 years ago
|
||
it's not an issue for nightly, if it should be fixed for 44, then the null check should help
Flags: needinfo?(surkov.alexander)
Comment 22•9 years ago
|
||
Crash volume for signature 'mozilla::a11y::DocAccessible::RemoveDependentIDsFor':
- nightly (version 50): 4 crashes from 2016-06-06.
- aurora (version 49): 10 crashes from 2016-06-07.
- beta (version 48): 30 crashes from 2016-06-06.
- release (version 47): 0 crashes from 2016-05-31.
- esr (version 45): 0 crashes from 2016-04-07.
Crash volume on the last weeks:
W. N-1 W. N-2 W. N-3 W. N-4 W. N-5 W. N-6 W. N-7
- nightly 0 0 1 1 0 1 0
- aurora 0 2 1 0 2 3 1
- beta 5 4 2 5 4 4 4
- release 0 0 0 0 0 0 0
- esr 0 0 0 0 0 0 0
Affected platform: Windows
| Assignee | ||
Comment 23•7 years ago
|
||
Whiteboard: a11y:crash-tree
Comment 24•7 years ago
|
||
Closing because no crashes reported for 12 weeks.
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → WONTFIX
Comment 25•7 years ago
|
||
Closing because no crashes reported for 12 weeks.
Comment 26•7 years ago
|
||
There are still some crashes so reopen it.
Status: RESOLVED → REOPENED
status-firefox64:
--- → affected
status-firefox65:
--- → affected
Resolution: WONTFIX → ---
Comment 27•4 years ago
|
||
Closing because no crashes reported for 12 weeks.
Status: REOPENED → RESOLVED
Closed: 7 years ago → 4 years ago
Resolution: --- → WORKSFORME
You need to log in
before you can comment on or make changes to this bug.
Description
•