Bug 1212133 - Ensure the node has a container r=davidb a=ritu